appId: com.nav1885.micromoment
---
- launchApp:
    clearState: true
- runFlow: _skip_onboarding.yaml

- tapOn: "Settings"
- assertVisible: "Settings"
- assertVisible: "ARCHIVED HABITS"
- assertVisible: "No archived habits"
- assertVisible: "ABOUT"
- assertVisible: "Version"
- assertVisible: "Reset onboarding"
