appId: com.nav1885.micromoment
---
- launchApp:
    clearState: true
- runFlow: _skip_onboarding.yaml

- tapOn: "Settings"
- tapOn:
    text: "Reset onboarding"
- tapOn: "Reset"

# Onboarding should be re-shown
- assertVisible: "Five minutes"
